meta-learner/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sygus_problem
Rule 1     sygus_problem -> cmd_set_logic cmd_list_non
Rule 2     sygus_problem -> cmd_list_non
Rule 3     cmd_list_non -> cmd
Rule 4     cmd_list_non -> cmd cmd_list_non
Rule 5     cmd -> cmd_define_sort
Rule 6     cmd -> cmd_declare_var
Rule 7     cmd -> cmd_declare_fun
Rule 8     cmd -> cmd_define_fun
Rule 9     cmd -> cmd_synth_fun
Rule 10    cmd -> cmd_constraint
Rule 11    cmd -> cmd_check_synth
Rule 12    cmd -> cmd_set_options
Rule 13    symbol -> SYMBOL
Rule 14    string -> STRING
Rule 15    literal -> INT
Rule 16    literal -> BOOL_TRUE
Rule 17    literal -> BOOL_FALSE
Rule 18    sort_expr -> SORT_INT
Rule 19    sort_expr -> SORT_BOOL
Rule 20    sort_expr -> symbol
Rule 21    sort_expr_list -> <empty>
Rule 22    sort_expr_list -> sort_expr sort_expr_list
Rule 23    term -> LB symbol term_list RB
Rule 24    term -> literal
Rule 25    term -> symbol
Rule 26    term -> let_term
Rule 27    term_list -> <empty>
Rule 28    term_list -> term term_list
Rule 29    let_clause -> LB symbol sort_expr term RB
Rule 30    let_clause_list_non -> let_clause
Rule 31    let_clause_list_non -> let_clause let_clause_list_non
Rule 32    let_term -> LB LET LB let_clause_list_non RB term RB
Rule 33    gterm -> LB symbol gterm_list RB
Rule 34    gterm -> literal
Rule 35    gterm -> symbol
Rule 36    gterm -> let_gterm
Rule 37    gterm -> LB EXP_CONSTANT sort_expr RB
Rule 38    gterm -> LB EXP_VARIABLE sort_expr RB
Rule 39    gterm -> LB EXP_INPUT_VARIABLE sort_expr RB
Rule 40    gterm -> LB EXP_LOCAL_VARIABLE sort_expr RB
Rule 41    gterm_list -> <empty>
Rule 42    gterm_list -> gterm gterm_list
Rule 43    let_gclause -> LB symbol sort_expr gterm RB
Rule 44    let_gclause_list_non -> let_gclause
Rule 45    let_gclause_list_non -> let_gclause let_gclause_list_non
Rule 46    let_gterm -> LB LET LB let_gclause_list_non RB gterm RB
Rule 47    param -> LB symbol sort_expr RB
Rule 48    param_list -> <empty>
Rule 49    param_list -> param param_list
Rule 50    gterm_list_non -> gterm
Rule 51    gterm_list_non -> gterm gterm_list_non
Rule 52    term_list_non -> term
Rule 53    term_list_non -> term term_list_non
Rule 54    ntdef -> LB symbol sort_expr LB gterm_list_non RB RB
Rule 55    ntdef_list_non -> ntdef
Rule 56    ntdef_list_non -> ntdef ntdef_list_non
Rule 57    cmd_set_logic -> LB CMD_SET_LOGIC symbol RB
Rule 58    cmd_define_sort -> LB CMD_DEFINE_SORT symbol sort_expr RB
Rule 59    cmd_declare_var -> LB CMD_DECLARE_VAR symbol sort_expr RB
Rule 60    cmd_declare_fun -> LB CMD_DECLARE_FUN symbol LB sort_expr_list RB sort_expr RB
Rule 61    cmd_define_fun -> LB CMD_DEFINE_FUN symbol LB param_list RB sort_expr term RB
Rule 62    cmd_synth_fun -> LB CMD_SYNTH_FUN symbol LB param_list RB sort_expr LB ntdef_list_non RB RB
Rule 63    cmd_constraint -> LB CMD_CONSTRAINT term RB
Rule 64    cmd_constraint -> LB CMD_CONSTRAINT symbol term_list_non RB
Rule 65    cmd_check_synth -> LB CMD_CHECK_SYNTH RB
Rule 66    option -> LB symbol string RB
Rule 67    option_list_non -> option
Rule 68    option_list_non -> option option_list_non
Rule 69    cmd_set_options -> LB CMD_SET_OPTIONS LB option_list_non RB RB

Terminals, with rules where they appear

BOOL_FALSE           : 17
BOOL_TRUE            : 16
CMD_CHECK_SYNTH      : 65
CMD_CONSTRAINT       : 63 64
CMD_DECLARE_FUN      : 60
CMD_DECLARE_VAR      : 59
CMD_DEFINE_FUN       : 61
CMD_DEFINE_SORT      : 58
CMD_SET_LOGIC        : 57
CMD_SET_OPTIONS      : 69
CMD_SYNTH_FUN        : 62
EXP_CONSTANT         : 37
EXP_INPUT_VARIABLE   : 39
EXP_LOCAL_VARIABLE   : 40
EXP_VARIABLE         : 38
INT                  : 15
LB                   : 23 29 32 32 33 37 38 39 40 43 46 46 47 54 54 57 58 59 60 60 61 61 62 62 62 63 64 65 66 69 69
LET                  : 32 46
RB                   : 23 29 32 32 33 37 38 39 40 43 46 46 47 54 54 57 58 59 60 60 61 61 62 62 62 63 64 65 66 69 69
SORT_BOOL            : 19
SORT_INT             : 18
STRING               : 14
SYMBOL               : 13
error                : 

Nonterminals, with rules where they appear

cmd                  : 3 4
cmd_check_synth      : 11
cmd_constraint       : 10
cmd_declare_fun      : 7
cmd_declare_var      : 6
cmd_define_fun       : 8
cmd_define_sort      : 5
cmd_list_non         : 1 2 4
cmd_set_logic        : 1
cmd_set_options      : 12
cmd_synth_fun        : 9
gterm                : 42 43 46 50 51
gterm_list           : 33 42
gterm_list_non       : 51 54
let_clause           : 30 31
let_clause_list_non  : 31 32
let_gclause          : 44 45
let_gclause_list_non : 45 46
let_gterm            : 36
let_term             : 26
literal              : 24 34
ntdef                : 55 56
ntdef_list_non       : 56 62
option               : 67 68
option_list_non      : 68 69
param                : 49
param_list           : 49 61 62
sort_expr            : 22 29 37 38 39 40 43 47 54 58 59 60 61 62
sort_expr_list       : 22 60
string               : 66
sygus_problem        : 0
symbol               : 20 23 25 29 33 35 43 47 54 57 58 59 60 61 62 64 66
term                 : 28 29 32 52 53 61 63
term_list            : 23 28
term_list_non        : 53 64

Parsing method: LALR

state 0

    (0) S' -> . sygus_problem
    (1) sygus_problem -> . cmd_set_logic cmd_list_non
    (2) sygus_problem -> . cmd_list_non
    (57) cmd_set_logic -> . LB CMD_SET_LOGIC symbol RB
    (3) cmd_list_non -> . cmd
    (4) cmd_list_non -> . cmd cmd_list_non
    (5) cmd -> . cmd_define_sort
    (6) cmd -> . cmd_declare_var
    (7) cmd -> . cmd_declare_fun
    (8) cmd -> . cmd_define_fun
    (9) cmd -> . cmd_synth_fun
    (10) cmd -> . cmd_constraint
    (11) cmd -> . cmd_check_synth
    (12) cmd -> . cmd_set_options
    (58) cmd_define_sort -> . LB CMD_DEFINE_SORT symbol sort_expr RB
    (59) cmd_declare_var -> . LB CMD_DECLARE_VAR symbol sort_expr RB
    (60) cmd_declare_fun -> . LB CMD_DECLARE_FUN symbol LB sort_expr_list RB sort_expr RB
    (61) cmd_define_fun -> . LB CMD_DEFINE_FUN symbol LB param_list RB sort_expr term RB
    (62) cmd_synth_fun -> . LB CMD_SYNTH_FUN symbol LB param_list RB sort_expr LB ntdef_list_non RB RB
    (63) cmd_constraint -> . LB CMD_CONSTRAINT term RB
    (64) cmd_constraint -> . LB CMD_CONSTRAINT symbol term_list_non RB
    (65) cmd_check_synth -> . LB CMD_CHECK_SYNTH RB
    (69) cmd_set_options -> . LB CMD_SET_OPTIONS LB option_list_non RB RB

    LB              shift and go to state 4

    sygus_problem                  shift and go to state 1
    cmd_set_logic                  shift and go to state 2
    cmd_list_non                   shift and go to state 3
    cmd                            shift and go to state 5
    cmd_define_sort                shift and go to state 6
    cmd_declare_var                shift and go to state 7
    cmd_declare_fun                shift and go to state 8
    cmd_define_fun                 shift and go to state 9
    cmd_synth_fun                  shift and go to state 10
    cmd_constraint                 shift and go to state 11
    cmd_check_synth                shift and go to state 12
    cmd_set_options                shift and go to state 13

state 1

    (0) S' -> sygus_problem .



state 2

    (1) sygus_problem -> cmd_set_logic . cmd_list_non
    (3) cmd_list_non -> . cmd
    (4) cmd_list_non -> . cmd cmd_list_non
    (5) cmd -> . cmd_define_sort
    (6) cmd -> . cmd_declare_var
    (7) cmd -> . cmd_declare_fun
    (8) cmd -> . cmd_define_fun
    (9) cmd -> . cmd_synth_fun
    (10) cmd -> . cmd_constraint
    (11) cmd -> . cmd_check_synth
    (12) cmd -> . cmd_set_options
    (58) cmd_define_sort -> . LB CMD_DEFINE_SORT symbol sort_expr RB
    (59) cmd_declare_var -> . LB CMD_DECLARE_VAR symbol sort_expr RB
    (60) cmd_declare_fun -> . LB CMD_DECLARE_FUN symbol LB sort_expr_list RB sort_expr RB
    (61) cmd_define_fun -> . LB CMD_DEFINE_FUN symbol LB param_list RB sort_expr term RB
    (62) cmd_synth_fun -> . LB CMD_SYNTH_FUN symbol LB param_list RB sort_expr LB ntdef_list_non RB RB
    (63) cmd_constraint -> . LB CMD_CONSTRAINT term RB
    (64) cmd_constraint -> . LB CMD_CONSTRAINT symbol term_list_non RB
    (65) cmd_check_synth -> . LB CMD_CHECK_SYNTH RB
    (69) cmd_set_options -> . LB CMD_SET_OPTIONS LB option_list_non RB RB

    LB              shift and go to state 15

    cmd_list_non                   shift and go to state 14
    cmd                            shift and go to state 5
    cmd_define_sort                shift and go to state 6
    cmd_declare_var                shift and go to state 7
    cmd_declare_fun                shift and go to state 8
    cmd_define_fun                 shift and go to state 9
    cmd_synth_fun                  shift and go to state 10
    cmd_constraint                 shift and go to state 11
    cmd_check_synth                shift and go to state 12
    cmd_set_options                shift and go to state 13

state 3

    (2) sygus_problem -> cmd_list_non .

    $end            reduce using rule 2 (sygus_problem -> cmd_list_non .)


state 4

    (57) cmd_set_logic -> LB . CMD_SET_LOGIC symbol RB
    (58) cmd_define_sort -> LB . CMD_DEFINE_SORT symbol sort_expr RB
    (59) cmd_declare_var -> LB . CMD_DECLARE_VAR symbol sort_expr RB
    (60) cmd_declare_fun -> LB . CMD_DECLARE_FUN symbol LB sort_expr_list RB sort_expr RB
    (61) cmd_define_fun -> LB . CMD_DEFINE_FUN symbol LB param_list RB sort_expr term RB
    (62) cmd_synth_fun -> LB . CMD_SYNTH_FUN symbol LB param_list RB sort_expr LB ntdef_list_non RB RB
    (63) cmd_constraint -> LB . CMD_CONSTRAINT term RB
    (64) cmd_constraint -> LB . CMD_CONSTRAINT symbol term_list_non RB
    (65) cmd_check_synth -> LB . CMD_CHECK_SYNTH RB
    (69) cmd_set_options -> LB . CMD_SET_OPTIONS LB option_list_non RB RB

    CMD_SET_LOGIC   shift and go to state 16
    CMD_DEFINE_SORT shift and go to state 17
    CMD_DECLARE_VAR shift and go to state 18
    CMD_DECLARE_FUN shift and go to state 19
    CMD_DEFINE_FUN  shift and go to state 20
    CMD_SYNTH_FUN   shift and go to state 21
    CMD_CONSTRAINT  shift and go to state 22
    CMD_CHECK_SYNTH shift and go to state 23
    CMD_SET_OPTIONS shift and go to state 24


state 5

    (3) cmd_list_non -> cmd .
    (4) cmd_list_non -> cmd . cmd_list_non
    (3) cmd_list_non -> . cmd
    (4) cmd_list_non -> . cmd cmd_list_non
    (5) cmd -> . cmd_define_sort
    (6) cmd -> . cmd_declare_var
    (7) cmd -> . cmd_declare_fun
    (8) cmd -> . cmd_define_fun
    (9) cmd -> . cmd_synth_fun
    (10) cmd -> . cmd_constraint
    (11) cmd -> . cmd_check_synth
    (12) cmd -> . cmd_set_options
    (58) cmd_define_sort -> . LB CMD_DEFINE_SORT symbol sort_expr RB
    (59) cmd_declare_var -> . LB CMD_DECLARE_VAR symbol sort_expr RB
    (60) cmd_declare_fun -> . LB CMD_DECLARE_FUN symbol LB sort_expr_list RB sort_expr RB
    (61) cmd_define_fun -> . LB CMD_DEFINE_FUN symbol LB param_list RB sort_expr term RB
    (62) cmd_synth_fun -> . LB CMD_SYNTH_FUN symbol LB param_list RB sort_expr LB ntdef_list_non RB RB
    (63) cmd_constraint -> . LB CMD_CONSTRAINT term RB
    (64) cmd_constraint -> . LB CMD_CONSTRAINT symbol term_list_non RB
    (65) cmd_check_synth -> . LB CMD_CHECK_SYNTH RB
    (69) cmd_set_options -> . LB CMD_SET_OPTIONS LB option_list_non RB RB

    $end            reduce using rule 3 (cmd_list_non -> cmd .)
    LB              shift and go to state 15

    cmd                            shift and go to state 5
    cmd_list_non                   shift and go to state 25
    cmd_define_sort                shift and go to state 6
    cmd_declare_var                shift and go to state 7
    cmd_declare_fun                shift and go to state 8
    cmd_define_fun                 shift and go to state 9
    cmd_synth_fun                  shift and go to state 10
    cmd_constraint                 shift and go to state 11
    cmd_check_synth                shift and go to state 12
    cmd_set_options                shift and go to state 13

state 6

    (5) cmd -> cmd_define_sort .

    LB              reduce using rule 5 (cmd -> cmd_define_sort .)
    $end            reduce using rule 5 (cmd -> cmd_define_sort .)


state 7

    (6) cmd -> cmd_declare_var .

    LB              reduce using rule 6 (cmd -> cmd_declare_var .)
    $end            reduce using rule 6 (cmd -> cmd_declare_var .)


state 8

    (7) cmd -> cmd_declare_fun .

    LB              reduce using rule 7 (cmd -> cmd_declare_fun .)
    $end            reduce using rule 7 (cmd -> cmd_declare_fun .)


state 9

    (8) cmd -> cmd_define_fun .

    LB              reduce using rule 8 (cmd -> cmd_define_fun .)
    $end            reduce using rule 8 (cmd -> cmd_define_fun .)


state 10

    (9) cmd -> cmd_synth_fun .

    LB              reduce using rule 9 (cmd -> cmd_synth_fun .)
    $end            reduce using rule 9 (cmd -> cmd_synth_fun .)


state 11

    (10) cmd -> cmd_constraint .

    LB              reduce using rule 10 (cmd -> cmd_constraint .)
    $end            reduce using rule 10 (cmd -> cmd_constraint .)


state 12

    (11) cmd -> cmd_check_synth .

    LB              reduce using rule 11 (cmd -> cmd_check_synth .)
    $end            reduce using rule 11 (cmd -> cmd_check_synth .)


state 13

    (12) cmd -> cmd_set_options .

    LB              reduce using rule 12 (cmd -> cmd_set_options .)
    $end            reduce using rule 12 (cmd -> cmd_set_options .)


state 14

    (1) sygus_problem -> cmd_set_logic cmd_list_non .

    $end            reduce using rule 1 (sygus_problem -> cmd_set_logic cmd_list_non .)


state 15

    (58) cmd_define_sort -> LB . CMD_DEFINE_SORT symbol sort_expr RB
    (59) cmd_declare_var -> LB . CMD_DECLARE_VAR symbol sort_expr RB
    (60) cmd_declare_fun -> LB . CMD_DECLARE_FUN symbol LB sort_expr_list RB sort_expr RB
    (61) cmd_define_fun -> LB . CMD_DEFINE_FUN symbol LB param_list RB sort_expr term RB
    (62) cmd_synth_fun -> LB . CMD_SYNTH_FUN symbol LB param_list RB sort_expr LB ntdef_list_non RB RB
    (63) cmd_constraint -> LB . CMD_CONSTRAINT term RB
    (64) cmd_constraint -> LB . CMD_CONSTRAINT symbol term_list_non RB
    (65) cmd_check_synth -> LB . CMD_CHECK_SYNTH RB
    (69) cmd_set_options -> LB . CMD_SET_OPTIONS LB option_list_non RB RB

    CMD_DEFINE_SORT shift and go to state 17
    CMD_DECLARE_VAR shift and go to state 18
    CMD_DECLARE_FUN shift and go to state 19
    CMD_DEFINE_FUN  shift and go to state 20
    CMD_SYNTH_FUN   shift and go to state 21
    CMD_CONSTRAINT  shift and go to state 22
    CMD_CHECK_SYNTH shift and go to state 23
    CMD_SET_OPTIONS shift and go to state 24


state 16

    (57) cmd_set_logic -> LB CMD_SET_LOGIC . symbol RB
    (13) symbol -> . SYMBOL

    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 26

state 17

    (58) cmd_define_sort -> LB CMD_DEFINE_SORT . symbol sort_expr RB
    (13) symbol -> . SYMBOL

    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 28

state 18

    (59) cmd_declare_var -> LB CMD_DECLARE_VAR . symbol sort_expr RB
    (13) symbol -> . SYMBOL

    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 29

state 19

    (60) cmd_declare_fun -> LB CMD_DECLARE_FUN . symbol LB sort_expr_list RB sort_expr RB
    (13) symbol -> . SYMBOL

    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 30

state 20

    (61) cmd_define_fun -> LB CMD_DEFINE_FUN . symbol LB param_list RB sort_expr term RB
    (13) symbol -> . SYMBOL

    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 31

state 21

    (62) cmd_synth_fun -> LB CMD_SYNTH_FUN . symbol LB param_list RB sort_expr LB ntdef_list_non RB RB
    (13) symbol -> . SYMBOL

    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 32

state 22

    (63) cmd_constraint -> LB CMD_CONSTRAINT . term RB
    (64) cmd_constraint -> LB CMD_CONSTRAINT . symbol term_list_non RB
    (23) term -> . LB symbol term_list RB
    (24) term -> . literal
    (25) term -> . symbol
    (26) term -> . let_term
    (13) symbol -> . SYMBOL
    (15) literal -> . INT
    (16) literal -> . BOOL_TRUE
    (17) literal -> . BOOL_FALSE
    (32) let_term -> . LB LET LB let_clause_list_non RB term RB

    LB              shift and go to state 33
    SYMBOL          shift and go to state 27
    INT             shift and go to state 38
    BOOL_TRUE       shift and go to state 39
    BOOL_FALSE      shift and go to state 40

    term                           shift and go to state 34
    symbol                         shift and go to state 35
    literal                        shift and go to state 36
    let_term                       shift and go to state 37

state 23

    (65) cmd_check_synth -> LB CMD_CHECK_SYNTH . RB

    RB              shift and go to state 41


state 24

    (69) cmd_set_options -> LB CMD_SET_OPTIONS . LB option_list_non RB RB

    LB              shift and go to state 42


state 25

    (4) cmd_list_non -> cmd cmd_list_non .

    $end            reduce using rule 4 (cmd_list_non -> cmd cmd_list_non .)


state 26

    (57) cmd_set_logic -> LB CMD_SET_LOGIC symbol . RB

    RB              shift and go to state 43


state 27

    (13) symbol -> SYMBOL .

    RB              reduce using rule 13 (symbol -> SYMBOL .)
    SORT_INT        reduce using rule 13 (symbol -> SYMBOL .)
    SORT_BOOL       reduce using rule 13 (symbol -> SYMBOL .)
    SYMBOL          reduce using rule 13 (symbol -> SYMBOL .)
    LB              reduce using rule 13 (symbol -> SYMBOL .)
    INT             reduce using rule 13 (symbol -> SYMBOL .)
    BOOL_TRUE       reduce using rule 13 (symbol -> SYMBOL .)
    BOOL_FALSE      reduce using rule 13 (symbol -> SYMBOL .)
    STRING          reduce using rule 13 (symbol -> SYMBOL .)


state 28

    (58) cmd_define_sort -> LB CMD_DEFINE_SORT symbol . sort_expr RB
    (18) sort_expr -> . SORT_INT
    (19) sort_expr -> . SORT_BOOL
    (20) sort_expr -> . symbol
    (13) symbol -> . SYMBOL

    SORT_INT        shift and go to state 46
    SORT_BOOL       shift and go to state 47
    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 44
    sort_expr                      shift and go to state 45

state 29

    (59) cmd_declare_var -> LB CMD_DECLARE_VAR symbol . sort_expr RB
    (18) sort_expr -> . SORT_INT
    (19) sort_expr -> . SORT_BOOL
    (20) sort_expr -> . symbol
    (13) symbol -> . SYMBOL

    SORT_INT        shift and go to state 46
    SORT_BOOL       shift and go to state 47
    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 44
    sort_expr                      shift and go to state 48

state 30

    (60) cmd_declare_fun -> LB CMD_DECLARE_FUN symbol . LB sort_expr_list RB sort_expr RB

    LB              shift and go to state 49


state 31

    (61) cmd_define_fun -> LB CMD_DEFINE_FUN symbol . LB param_list RB sort_expr term RB

    LB              shift and go to state 50


state 32

    (62) cmd_synth_fun -> LB CMD_SYNTH_FUN symbol . LB param_list RB sort_expr LB ntdef_list_non RB RB

    LB              shift and go to state 51


state 33

    (23) term -> LB . symbol term_list RB
    (32) let_term -> LB . LET LB let_clause_list_non RB term RB
    (13) symbol -> . SYMBOL

    LET             shift and go to state 53
    SYMBOL          shift and go to state 27

    symbol                         shift and go to state 52

state 34

    (63) cmd_constraint -> LB CMD_CONSTRAINT term . RB

    RB              shift and go to state 54


state 35

    (64) cmd_constraint -> LB CMD_CONSTRAINT symbol . term_list_non RB
    (25) term -> symbol .
    (52) term_list_non -> . term
    (53) term_list_non -> . term term_list_non
    (23) term -> . LB symbol term_list RB
    (24) term -> . literal
    (25) term -> . symbol
    (26) term -> . let_term
    (15) literal -> . INT
    (16) literal -> . BOOL_TRUE
    (17) literal -> . BOOL_FALSE
    (13) symbol -> . SYMBOL
    (32) let_term -> . LB LET LB let_clause_list_non RB term RB

    RB              reduce using rule 25 (term -> symbol .)
    LB              shift and go to state 33
    INT             shift and go to state 38
    BOOL_TRUE       shift and go to state 39
    BOOL_FALSE      shift and go to state 40
    SYMBOL          shift and go to state 27
